--- a/templates/index.html
+++ b/templates/index.html
@@ -134,6 +134,13 @@
                         </div>
                     </div>
                 </div>
+                 <div class="col-md-8 services-graph">
+                    <div class="row">
+                        <div  class="map-image">
+                            <img src="/static/images/map.png" width="700">
+                        </div>
+                    </div>
+                </div>
                 <div class="col-md-4 services-box">
                     <div class="row">
                         <div class="col-md-4">
