added donation iamge to home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -134,6 +134,13 @@
                         </div>
                     </div>
                 </div>
+                 <div class="col-md-8 coral-graph">
+                    <div class="row">
+                        <div  class="map-image">
+                            <img src="/static/images/coral.png" width="270">
+                        </div>
+                    </div>
+                </div>
                  <div class="col-md-8 services-graph">
                     <div class="row">
                         <div  class="map-image">
