--- a/static/base.css
+++ b/static/base.css
@@ -262,6 +262,14 @@ form div.field {
     text-align: center;
 }
 
+.coral-graph {
+    margin-top: 50px;
+    position: absolute;
+    margin-left:600px;
+
+}
+
+
 
 
 
