--- a/static/base.css
+++ b/static/base.css
@@ -263,11 +263,17 @@ form div.field {
 }
 
 .coral-graph {
-    margin-top: 50px;
+    margin-top: 5px;
     position: absolute;
     margin-left:600px;
+    margin-bottom: 100px;
 
 }
+
+.map-image {
+    margin-top: 50px;
+}
+
 
 
 
