--- a/templates/posts.html
+++ b/templates/posts.html
@@ -15,12 +15,12 @@
 
         .subtitle-description{
             font-size: 20px;
-            color: darkgrey;
+            color: #6a6969;
         }
 
         .subtitle-description2{
             font-size: 20px;
-            color: rgba(83, 145, 88, 0.82)
+            color: rgb(44, 100, 49);
         }
 
         /* Card effect for challenges */
