Button said previous when it should have said next, fix error with getting the new event id.

--- a/templates/calculator.html
+++ b/templates/calculator.html
@@ -188,7 +188,7 @@
                         <p class="input-field">{{ form.air_travel(class="form-control") }}</p>
                     </div>
 
-                    <a class="btn btn-lg btn-prev">Next</a>
+                    <a class="btn btn-lg btn-prev">Previous</a>
                     <a class="btn btn-lg btn-next">Next</a>
                 </div>
                 <div id="home" class="tab-pane fade" role="tabpanel" aria-labelledby="home-tab">
