Shorten tab names in calculator

--- a/templates/calculator.html
+++ b/templates/calculator.html
@@ -43,7 +43,7 @@
                         role="tab"
                         aria-controls="about"
                         aria-selected="true"
-                >About this calculator</a>
+                >About</a>
             </li>
             <li class="nav-item" role="presentation">
                 <a
@@ -67,7 +67,7 @@
                         role="tab"
                         aria-controls="home"
                         aria-selected="false"
-                >Home utilities</a>
+                >Home</a>
             </li>
             <li class="nav-item" role="presentation">
                 <a
@@ -91,7 +91,7 @@
                         role="tab"
                         aria-controls="other"
                         aria-selected="false"
-                >Other Goods/Services</a>
+                >Other</a>
             </li>
             <li class="nav-item" role="presentation">
                 <a
