--- a/templates/calculator.html
+++ b/templates/calculator.html
@@ -293,7 +293,7 @@
                         {% for error in form.goods.errors %}
                             <div class="alert alert-danger" role="alert">{{ error }}</div>
                         {% endfor %}
-                        <p class="query">1. Goods</p>
+                        <p class="query">1. Goods (Other tangible expenses, i.e. toiletries, furniture, etc.)</p>
                         <p class="input-field">{{ form.goods(class="form-control") }}</p>
                     </div>
 
@@ -301,7 +301,7 @@
                         {% for error in form.services.errors %}
                             <div class="alert alert-danger" role="alert">{{ error }}</div>
                         {% endfor %}
-                        <p class="query">2. Services</p>
+                        <p class="query">2. Services (Other non-tangible expenses, i.e. doctors appointments, insurance, repairs)</p>
                         <p class="input-field">{{ form.services(class="form-control") }}</p>
                     </div>
 
