--- a/templates/donate.html
+++ b/templates/donate.html
@@ -31,7 +31,7 @@
     }
 
     .donate-content .text {
-        color: rgba(83, 145, 88, 0.82)
+        color: rgb(44, 100, 49);
     }
 
     .donate-content .text h1 {
@@ -56,7 +56,7 @@
     .donate-how\? {
         font-size: 35px;
         margin-top: 30px;
-        color: rgba(83, 145, 88, 0.82)
+        color: rgb(44, 100, 49);
     }
 
     .donate-steps{
