--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -63,7 +63,7 @@
     <div class="flex-container">
         <h1 class="title is-1 header">Challenges</h1>
         <div class="subtitle-description2">
-            <div class="description wow fadeInLeftBig">
+            <div class="description">
                 <p>
                     Join a challenge and help reach the UK's goal of cutting down territorial emissions to net zero by 2050.
                 </p>
