Show the datepicker correctly on create event page.

--- a/templates/create_event.html
+++ b/templates/create_event.html
@@ -20,7 +20,9 @@
             $.datepicker.regional['uk']
         )
 
-        $("#date").datepicker();
+        $(function() {
+            $("#date").datepicker();
+        })
     </script>
 {% endblock %}
 {% block content %}
